kubernetes/overlays/homelab/staging/recommendation/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation
spec:
  template:
    spec:
      containers:
        - name: recommendation
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 512Mi
