kubernetes/overlays/homelab/staging/recommendation/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation
spec:
  selector:
    app: recommendation
